# Fast-TTS

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
fast_tts/: fast_tts.py
fast_tts/rvc/: rvc_api.py
fast_tts/rvc/configs/: config.py
fast_tts/rvc/infer/lib/: rmvpe.py
fast_tts/rvc/infer/lib/infer_pack/: attentions.py  models.py  modules.py
fast_tts/rvc/infer/lib/jit/: get_rmvpe.py
fast_tts/rvc/infer/modules/vc/: modules.py  pipeline.py
fast_tts/tortoise/: api_fast.py  tortoise_api.py
fast_tts/tortoise/models/: arch_util.py  autoregressive.py  autoregressive_old.py  bigvgan.py  classifier.py  clvp.py  cvvp.py  diffusion_decoder.py  random_latent_generator.py  transformer.py  xtransformers.py
fast_tts/tortoise/utils/: audio.py  wav2vec_alignment.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  numba  paracode  unicode
src/Fast_TTS/: fast_tts.py
src/fast_TTS/rvc/infer/modules/vc/: utils.py
src/fast_TTS/tortoise/: api_fast.py  tortoise_api.py
tests/: test.py  test_tts.py
